[gd_scene load_steps=3 format=3 uid="uid://csyq2aw6rm2fs"]

[ext_resource type="Script" path="res://Scenes/ButtonCardSlot/button_card_slot.gd" id="1_j2j0w"]
[ext_resource type="Script" path="res://Scenes/CardSlot/card_slot.gd" id="1_k1dk8"]

[node name="ButtonCardSlot" type="Node2D"]
script = ExtResource("1_j2j0w")

[node name="CardSlot" type="Node2D" parent="."]
script = ExtResource("1_k1dk8")

[node name="Button" type="Button" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = -18.5
offset_top = 100.0
offset_right = 18.5
offset_bottom = 131.0
grow_horizontal = 2
text = "Use"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
